--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     					<h1 class="wow fadeIn" data-wow-offset="50" data-wow-delay="0.3s">We make Website and I am <span>Arif Mahmud</span></h1>
     					<div class="element">
                             <div class="sub-element">Hello, this is Arif Mahmud</div>
-                            <div class="sub-element">Dr. Mahbobur Rahman Mollah College</div>
+                            <div class="sub-element">Dr. Mahbubur Rahman Mollah College</div>
                             <div class="sub-element">Jatrabari, Dhaka</div>
                         </div>
     					<a data-scroll href="#about" class="btn btn-default wow fadeInUp" data-wow-offset="50" data-wow-delay="0.6s">GET STARTED</a>
@@ -265,7 +265,7 @@
     						<p><i class="fa fa-map-marker"></i>Uttar Badda , Dhaka</p>
     					</address>
     					<ul class="social-icon">
-    						<li><h4>CONTRAC WITH SOCIAL</h4></li>
+    						<li><h4>CONTRACT WITH SOCIAL</h4></li>
     						<li><a href="https://www.facebook.com/profile.php?id=100012744574927" class="fa fa-facebook"></a></li>
     						
     						<li><a href="https://www.instagram.com/arnob_khan105864/" class="fa fa-instagram"></a></li>
